# data-structures-project

./: pyproject.toml
homework-1/: main.py
homework-3/: main.py
src/: linked_list.py  queue.py  stack.py
tests/: test_linked_list.py  test_queue.py  test_stack.py
